--- a/judge0.conf
+++ b/judge0.conf
@@ -181,11 +181,11 @@ AUTHN_TOKEN=
 
 # Specify authorization header name.
 # Default: X-Auth-User
-AUTHZ_HEADER=
+AUTHZ_HEADER=pandey
 
 # Specify valid authorization tokens.
 # Default: empty - authorization is disabled, protected API calls cannot be issued
-AUTHZ_TOKEN=
+AUTHZ_TOKEN=dipanshu
 
 
 ################################################################################
